syntax = "proto3";

package scalablesyslog;

service Adapter {
    rpc ListBindings(ListBindingsRequest) returns (ListBindingsResponse) {}
    rpc CreateBinding(CreateBindingRequest) returns (CreateBindingResponse) {}
}

message Binding {
    string appId = 1;
    string hostname = 2;
    string drain = 3;
}

message ListBindingsRequest {}

message ListBindingsResponse {
    repeated Binding bindings = 1;
}

message CreateBindingRequest {
    Binding binding = 1;
}

message CreateBindingResponse {}

